# dstask

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  python-publish.yml
dstask/: events.py  task.py  xcom.py
dstask/backend/: __init__.py  async_redis.py  redis.py  xcom_backend.py
dstask/tests/: test_dstask.py  test_dstask_pytest.py
